2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Work for some `A'
	prefix keys.
	(gnus-article-read-summary-send-keys): Use gnus-character-to-event.
	(gnus-article-describe-bindings): Simplify; move XEmacs stuff to
	gnus-xmas.el.

	* gnus-xmas.el: Bind gnus-agent-summary-mode when compiling.
	(gnus-xmas-article-describe-bindings): New function.
	(gnus-xmas-redefine): Make gnus-article-describe-bindings alias to
	gnus-xmas-article-describe-bindings.

	* lpath.el: Don't fbind character-to-event and map-keymap for Emacs 21.

2008-01-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-marks, gnus-registry-default-mark):
	Add new variables for article mark management.
	(gnus-registry-extra-entries-precious, gnus-registry-trim): Define a
	list of extra data entries which, when present, will indicate that the
	article ID should not be trimmed from the registry.
	(gnus-registry-mark-article, gnus-registry-article-marks): Remove these functions.
	(gnus-registry-read-mark): New function to read a mark name from the user.
	(gnus-registry-set-article-mark, gnus-registry-remove-article-mark)
	(gnus-registry-set-article-mark-internal): New functions to add and
	remove marks.
	(gnus-registry-get-article-marks): New function to show the marks for
	an article, or retrieve them for further use.

2008-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Show all `S' prefix
	keys when no argument is given.

2008-01-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* imap.el (imap-ping-server): New variable.
	(imap-opened): On add extra ping if imap-ping-server is non-nil.
	(imap-ping-server): Minor doc string fixes.

2008-01-14  Knut Anders Hatlen  <kahatlen@gmail.com>  (tiny change)

	* imap.el (imap-ping-server): New function.
	(imap-opened): Call imap-ping-server.

2008-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): New function.