@@ -1,3 +1,7 @@
+2008-01-18  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* gnus-registry.el (gnus-registry-trim): Use append, not concat.
+
 2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-article-read-summary-keys): Work for some `A'
